examples/z_ShouldFail/ParseErrors/BigMain.java
class BigMain {
  public static void main (String[] argv) {
    int i;
    int n;
    i = 0;
    n = 10;
    while (i < n) {
      System.out.println (i);
      i = i+1;
    }
  }
}
